kube/app-a-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  app-a
  namespace: default
spec:
  selector:
    app:  app-a
  clusterIP: None
  ports:
  - name: app
    port: 80
    protocol: TCP
    targetPort: 80
  sessionAffinity: None
  type: ClusterIP
