kube/app-a-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-a-halo-sh
  namespace: default
spec:
  rules:
  - host: app-a.halo.sh
    http:
      paths:
      - backend:
          serviceName: app-a
          servicePort: 80
  tls:
  - secretName: halo-sh-tls
